# basexx

./: .clangd  .vimrc  CMakeLists.txt  CMakePresets.json  README.md
src/: CMakeLists.txt  basexx.h
test/: CMakeLists.txt  test.cpp
